<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#f1e9d2">

    <TextView
        android:id="@+id/tvGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/game_name"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGameName" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUsername"
        app:layout_constraintTop_toBottomOf="@+id/tvGameName" />

    <TextView
        android:id="@+id/tvIP"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/IP"
        android:textSize="20sp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <EditText
        android:id="@+id/etIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/tvIP"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <TextView
        android:id="@+id/tvPort"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/port"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIP" />

    <EditText
        android:id="@+id/etPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPort"
        app:layout_constraintTop_toBottomOf="@+id/etIP" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_brown"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPort" />

    <TextView
        android:id="@+id/tvPlayers"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/players"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOK" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="255dp"
        android:layout_height="33dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/gray"
        android:visibility="visible"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPlayers"
        app:layout_constraintTop_toBottomOf="@+id/btnOK" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/dark_brown"
        android:text="@string/play"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>